--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "declaration": true
   },
   "include": [
-    "./scripts", 
-    "./test", 
-    "./types", 
-    "./simulation", 
+    "./scripts",
+    "./test",
+    "./types",
+    "./simulation",
     "test-old/SynthetixAdapter.ts",
     "./deployments/kovan-ovm/lyra.realPricing.json",
     "./deployments/kovan-ovm/synthetix.json",
@@ -22,13 +22,6 @@
     "./deployments/mainnet-ovm/synthetix.json",
     "./examples"
   ],
-  "exclude": [
-    "node_modules",
-    "artifacts",
-    "cache",
-    ".git",
-    "typechain-types",
-    ".lyra"
-  ],
+  "exclude": ["node_modules", "artifacts", "cache", ".git", "typechain-types", ".lyra"],
   "files": ["./hardhat.config.ts", "typechain-types/hardhat.d.ts", "types.d.ts"]
 }
